# master_computer

./: AreaExternal.cpp  AreaExternal.dsp  AreaExternal.vcproj  AreaExternal.vcproj.8.00.old  AreaExternal.vcxproj  AreaExternal.vcxproj.filters  AreaFreeRun.cpp  AreaFreeRun.dsp  AreaFreeRun.sln  AreaFreeRun.vcproj  AreaFreeRun.vcproj.8.00.old  AreaFreeRun.vcxproj  AreaFreeRun.vcxproj.filters  AreaFreeRun_TrackCam_Copy.cpp  AreaFreeRun_TrackCam_GUI.cpp  AreaFreeRun_TrackCam_Old.cpp  AreaFreeRun_TrackCam_TestingFile.cpp  AreaGrabberControl.cpp  AreaGrabberControl.dsp  AreaGrabberControl.vcproj  AreaGrabberControl.vcproj.8.00.old  AreaGrabberControl.vcxproj  AreaGrabberControl.vcxproj.filters  AreaSoftware.cpp  AreaSoftware.dsp  AreaSoftware.vcproj  AreaSoftware.vcproj.8.00.old  AreaSoftware.vcxproj  AreaSoftware.vcxproj.filters  Assessment of AreaFreeRun_TrackCam_TestingFile.rtf  CMakeLists.txt  LineFreeRunImg.cpp  LineFreeRunImg.dsp  LineFreeRunImg.vcproj  LineFreeRunImg.vcproj.8.00.old  LineFreeRunImg.vcxproj  LineFreeRunImg.vcxproj.filters  LineGatedAsyncTriggerLine.cpp  LineGatedAsyncTriggerLine.dsp  LineGatedAsyncTriggerLine.vcproj  (+49 more)
C++/: PylonSamples_1394.sln  PylonSamples_GigE.sln  PylonSamples_Usb.sln
C++/DeviceRemovalHandling/: DeviceRemovalHandling_Usb.vcxproj  DeviceRemovalHandling_Usb.vcxproj.filters
C++/GUI_ImageWindow/: GUI_ImageWindow_Usb.vcxproj
C++/GUI_MFC/: GuiSample_Usb.vcxproj
C++/Grab/: Grab.cpp  Grab_Usb.sln  Grab_Usb.vcxproj  Grab_Usb.vcxproj.filters
C++/Grab_CameraEvents/: Grab_CameraEvents_Usb.cpp  Grab_CameraEvents_Usb.vcxproj  Grab_CameraEvents_Usb.vcxproj.filters
C++/Grab_ChunkImage/: Grab_ChunkImage_Usb.vcxproj  Grab_ChunkImage_Usb.vcxproj.filters
C++/Grab_MultipleCameras/: Grab_MultipleCameras_Usb.vcxproj
C++/Grab_Strategies/: Grab_Strategies_Usb.vcxproj  Grab_Strategies_Usb.vcxproj.filters
C++/Grab_UsingBufferFactory/: Grab_UsingBufferFactory_Usb.vcxproj
C++/Grab_UsingExposureEndEvent/: Grab_UsingExposureEndEvent_Usb.vcxproj  Grab_UsingExposureEndEvent_Usb.vcxproj.filters
Debug/: AreaFreeRun.ilk  AreaFreeRun_manifest.rc  AreaSoftware.lastbuildstate  BuildLog.htm  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  jij_manifest.rc  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.dep  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb  vc141.idb
Master_Code/: Master_Code.sln  Master_Code.vcxproj  Master_Code.vcxproj.filters  TestingFile.txt  comms.cpp  comms.h  file_IO.cpp  file_IO.h  grbl_move.cpp  master_code.cpp  test_variables.cpp  test_variables.h
Release/: AreaFreeRun.lastbuildstate  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
temp0205/: AreaFreeRun_TrackCam_TestingFile.cpp
(+48 files in other folders)
